arruma problemas com o background

--- a/pages/desktop.html
+++ b/pages/desktop.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eleição 2024</title>
+    <title>Consulta Candidatos</title>
+    <link rel="icon" href="..\assets\candidatos.png">
     <style>
         body {
             font-family: Helvetica;
@@ -12,8 +13,8 @@
             flex-direction: column;
             align-items: center;
             background-image: url('https://s1.1zoom.me/b5050/84/429037-svetik_3840x2160.jpg');
-            background-size: cover;
-            background-position: center;
+            background-size: auto;
+            background-position: fixed;
             filter: blur(0px);
         }
         .container {
@@ -343,7 +344,6 @@
         <img src="../assets\logounb.fw_.png" alt="Logo UnB">
         <p>CIC0097 - BANCOS DE DADOS - T01</p>
         <p>Departamento de Ciência da Computação</p>
-        <br>
         <p>Consulta Candidatos 2024 &copy; Todos os direitos reservados.</p>
     </div>
 </body>
